# projetoapp

./: .gitignore  .pdm.toml  README.md  db.sqlite3  pyproject.toml
__pypackages__/3.10/lib/: pasta_app.pth
__pypackages__/3.10/lib/Django-4.0.4.dist-info/: RECORD
__pypackages__/3.10/lib/PyJWT-2.4.0.dist-info/: RECORD
__pypackages__/3.10/lib/asgiref-3.5.2.dist-info/: RECORD
__pypackages__/3.10/lib/certifi-2022.5.18.1.dist-info/: RECORD
__pypackages__/3.10/lib/cffi-1.15.0.dist-info/: RECORD
__pypackages__/3.10/lib/charset_normalizer-2.0.12.dist-info/: RECORD
__pypackages__/3.10/lib/cryptography-37.0.2.dist-info/: RECORD
__pypackages__/3.10/lib/defusedxml-0.7.1.dist-info/: RECORD
__pypackages__/3.10/lib/django_allauth-0.50.0.dist-info/: RECORD
__pypackages__/3.10/lib/django_crispy_forms-1.14.0.dist-info/: RECORD
__pypackages__/3.10/lib/idna-3.3.dist-info/: RECORD
__pypackages__/3.10/lib/oauthlib-3.2.0.dist-info/: RECORD
__pypackages__/3.10/lib/pasta_app-0.0.1.dist-info/: METADATA  RECORD  direct_url.json
__pypackages__/3.10/lib/pycparser-2.21.dist-info/: RECORD
__pypackages__/3.10/lib/python3_openid-3.2.0.dist-info/: RECORD
__pypackages__/3.10/lib/requests-2.27.1.dist-info/: RECORD
__pypackages__/3.10/lib/requests_oauthlib-1.3.1.dist-info/: RECORD
__pypackages__/3.10/lib/sqlparse-0.4.2.dist-info/: RECORD
__pypackages__/3.9/lib/: projeto_app.pth
applocalizacao/: apps.py  urls.py  views.py
applocalizacao/migrations/: 0001_initial.py
loc/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
(+10 files in other folders)
