[project]
name = "pasta app"
version = "0.0.1"
description = ""
authors = [
    {name = "murilo", email = "muriloeduardo1993@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
